# S3-OK

./: .gitignore  Cargo.toml  Jenkinsfile  README.md  dataplot.ipynb  dataplot.py
.github/workflows/: rust.yaml
docs/: generator.md  greedy.md
src/: app.rs  generator.rs  greedy.rs  io.rs  main.rs  pretty_print.rs  random.rs  serializer.rs  settings.yaml  simulated_annealing.rs
src/modules/: generator.rs
src/utils/: case.rs  core.rs  macros.rs  mod.rs  schedule.rs  settings.rs  task.rs
