[package]
name = "co-pcmax"
version = "0.1.0"
authors = ["Jakub Kwiatkowski <jakubkw99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
colorful = "0.2.1"

[dependencies.clap]
version = "2.33.3"
features = ["yaml"]