[package]
name = "co-pcmax"
version = "0.1.0"
authors = ["Jakub Kwiatkowski <jakubkw99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
colorful = "0.2.1"
once_cell = "1.5.2"
serde_json = "1.0.61"

[dependencies.clap]
version = "2.33.3"
features = ["yaml"]

[dependencies.serde]
version = "1.0.117"
features = ["derive"]